--- a/scss/_marketing-promo.scss
+++ b/scss/_marketing-promo.scss
@@ -91,7 +91,7 @@
     background-color: $blue;
     top: 0;
     left: 340px;
-    transition: left 0.2s;
+    transition: left 0.1s;
     z-index: 9999;
     padding: 0;
     // Desktop and below
