--- a/scss/_nav-mobile.scss
+++ b/scss/_nav-mobile.scss
@@ -141,11 +141,12 @@
 .nav-level-1 {
     // Phone and below
     @include breakpoint(small-max) {
-        transition: left 0.2s;
+        transition: left 0.1s;
         left: 0;
         position: fixed;
         margin: 0;
-        padding: 0 15px;
+        // padding: 0 15px;
+        padding: 0;
         background-color: $gray-list-background;
         top: 55px;
         width: 100%;
@@ -157,7 +158,7 @@
 }
 
 .nav-level-1.open {
-    transition: left 0.2s;
+    transition: left 0.1s;
     // Phone and below
     @include breakpoint(small-max) {
         height: 100%;
@@ -165,11 +166,17 @@
     }
 }
 .nav-level-1.open.left {
-    transition: left 0.2s;
+    transition: left 0.1s;
     // Phone and below
     @include breakpoint(small-max) {
-        left: -100%;
+        // left: -100%;
+        left: 0;
     }
+}
+
+.nav-level-1.open.left .nav__list {
+    left: -100%;
+    z-index: 1;
 }
 
 .nav-level-1.open .nav__list:last-child::after {
@@ -183,7 +190,7 @@
 
 .nav-level-2 {
     // display: none;
-    transition: left 0.2s;
+    transition: left 0.1s;
     left: 100%;
     position: fixed;
     height: 100%;
@@ -232,7 +239,7 @@
     // Phone and below
     @include breakpoint(small-max) {
         border: 0;
-        transition: left 0.2s;
+        transition: left 0.1s;
         background-color: $gray-list-background;
         position: fixed;
         display: block;
@@ -251,6 +258,7 @@
         padding-top: 0;
         height: 100%;
         left: 0px;
+        z-index: 999;
         // margin-left: 0;
         // padding-left: 0;
         position: fixed;
