--- a/scss/_nav-primary.scss
+++ b/scss/_nav-primary.scss
@@ -50,7 +50,7 @@
     height: 0;
     padding-left: 0;
     height: 22px;
-    transition: left 0.2s;
+    transition: left 0.1s;
     // Tablet and below
     @include breakpoint(small-max) {
         position: fixed;
@@ -70,12 +70,17 @@
     // }
 }
 
+.nav-main .nav__list {
+    padding: 0 15px;
+}
+
 .nav-main.open .nav__list {
     // Phone and below
     @include breakpoint(small-max) {
-        transition: left 0.2s;
+        transition: left 0.1s;
         left: 0;
-        padding: 0 15px;
+        // padding: 0 15px;
+        padding: 0;
         height: 100%;
     }
 }
@@ -84,7 +89,7 @@
     // Phone and below
     @include breakpoint(small-max) {
         position: absolute;
-        left: -100%;
+        left: -50%;
     }
 }
 
@@ -111,6 +116,10 @@
         padding: 0 5px 0 15px;
         border-bottom: 1px solid $gray-list-border;
     }
+}
+
+.nav-level-1.open .nav__list {
+    padding: 0 15px;
 }
 
 .nav__list--item a {
@@ -203,6 +212,10 @@
     @include breakpoint(small-max) {
         content: none;
     }
+}
+
+.nav__list--item a.no-children::after {
+    content: none;
 }
 
 .nav__list--item a.active::after {
